WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228964
macCatalyst: Flexible viewport tests that dump the window size fail because it doesn't match iPad
https://bugs.webkit.org/show_bug.cgi?id=228964
Summary
macCatalyst: Flexible viewport tests that dump the window size fail because i...
Tim Horton
Reported
2021-08-10 12:13:57 PDT
macCatalyst: Flexible viewport tests that dump the window size fail because it doesn't match iPad
Attachments
Patch
(2.77 KB, patch)
2021-08-10 12:25 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2021-08-10 12:25:06 PDT
Created
attachment 435280
[details]
Patch
EWS
Comment 2
2021-08-10 15:17:40 PDT
Committed
r280867
(
240407@main
): <
https://commits.webkit.org/240407@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 435280
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-08-10 15:18:16 PDT
<
rdar://problem/81763927
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug